# CirculantPreconditioner

./: CMakeLists.txt  README.md  ToDo.md
prototypes/: FftPrecond_1D.c  FftPrecond_2D.c  FftPrecond_2D.py  FftPrecond_3D.py
src/: FftLinearSolver_3D.c  FftLinearSolver_3D.h  FftNumericalSolver_3D.c  FftPrecond_1D.c  FftPrecond_2D.c  FftPrecond_3D.c  FftPrecond_3D.h  PCSHELLFft_3D.cxx  PCSHELLFft_3D.hxx  TransportEquation.cxx  TransportEquation2.hxx  WaveSystem.cxx  WaveSystem.hxx
tests/: CMakeLists.txt  TransportEquationFFT_SphericalExplosion_impl_mpi.cxx  TransportEquation_SphericalExplosion_impl_mpi.cxx  WaveSystem_SphericalExplosion_expl_mpi.cxx  WaveSystem_SphericalExplosion_expl_seq.cxx  WaveSystem_SphericalExplosion_impl_mpi.cxx  WaveSystem_SphericalExplosion_impl_seq.cxx  testFftPrecond.c
tests/FFTDirectSolver/: testFftSolver_1D.py  testFftSolver_2D.c  testFftSolver_2D.py  testFftSolver_3D.c
